tests/compile-fail/handler-registered-twice.stderr
error[E0499]: cannot borrow `*int0` as mutable more than once at a time
  --> $DIR/handler-registered-twice.rs:24:41
   |
23 |         scope.register(Interrupt::INT0, int0);
   |                                         ---- first mutable borrow occurs here
24 |         scope.register(Interrupt::INT1, int0);
   |               --------                  ^^^^ second mutable borrow occurs here
   |               |
   |               first borrow later used by call
